<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="5dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <Button
            android:id="@+id/pick_video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:text="@string/pick_video_button"
            android:textAllCaps="false"
            android:textSize="25sp" />

        <Button
            android:id="@+id/clear_cache_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:text="@string/clear_cache"
            android:textAllCaps="false"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>